--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
@@ -52,8 +54,6 @@
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
-    "material-ui": "^0.20.2",
-    "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.2.17",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
