--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "nodemon": "^1.18.4",
+    "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.3.0",
@@ -43,6 +45,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
@@ -52,8 +56,6 @@
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
-    "material-ui": "^0.20.2",
-    "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.2.17",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
